# openvela-external

./: .gitignore  CMakeLists.txt  Make.defs  Makefile  README.md  README_zh-cn.md  Submake.mk
Arm-2D/: .gitignore
Chipmunk2D/: Kconfig  Make.defs  Makefile
EndpointAI/: Kconfig  Make.defs  Makefile  Submake.mk
Ne10/: Kconfig  Make.defs  Makefile  Submake.mk
QuadProgpp/: CMakeLists.txt  Kconfig  Make.defs  Makefile
aac/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk
abseil-cpp/: .gitignore
android/: CMakeLists.txt  Kconfig  Make.defs  Makefile
asio/: CMakeLists.txt  Kconfig  Make.defs  Makefile
atomic_queue/: .gitignore
auto-pts/: .gitignore
avb/: CMakeLists.txt  Kconfig  Make.defs  Makefile
benchtests/: CMakeLists.txt  Kconfig  Make.defs  Makefile  buildbench.py  test-skeleton.c
bluelet/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk
box2d/: .gitignore  CMakeLists.txt  Kconfig  Make.defs  Makefile
bsdiff/: Kconfig  Make.defs  Makefile  Makefile.host  Submake.mk
bzip2/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk
c-ares/: .gitignore  CMakeLists.txt  Kconfig  Make.defs  Makefile  ares_config.h
cAT/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk
cantools/: .gitignore
catapult/: .gitignore
cmark-gfm/: .gitignore  CMakeLists.txt  Kconfig  Make.defs  Makefile
cmocka/: Kconfig  Make.defs  Makefile  Submake.mk
connectedhomeip/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk
connman/: CMakeLists.txt  Kconfig  Make.defs  Makefile  config.h
coremark/: Kconfig  Make.defs  Makefile  Submake.mk
coremark-pro/: Kconfig  Make.defs  Makefile
cpp-toml/: CMakeLists.txt  Kconfig  Make.defs  Makefile
cunit/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk
curl/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk  Submake_lib.mk  Submake_src.mk  curl_config.h
dbus/: CMakeLists.txt  Kconfig  Make.defs  Makefile  config.h  dbus-arch-deps.h
ddelta/: CMakeLists.txt  Kconfig  Make.defs  Makefile
dhrystone/: Kconfig  Make.defs  Makefile
eigen/: CMakeLists.txt  Kconfig  Make.defs  Makefile
ell/: Kconfig  Make.defs  Makefile
enet/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk
erpc/: .gitignore  Kconfig  Make.defs  Makefile
ethercat/: .gitignore  Kconfig  Make.defs  Makefile
exfatprogs/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk
fastdds/: .gitignore  CMakeLists.txt  Kconfig
ffmpeg/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk
fio/: Kconfig  Make.defs  Makefile
fluoride/: Kconfig  Make.defs  Makefile  Submake.mk
fmtlib/: .gitignore
freetype/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk
glib/: CMakeLists.txt  Kconfig  Make.defs  Makefile  config.h  glibconfig.h
googlebenchmark/: CMakeLists.txt  Kconfig  Make.defs  Makefile
googletest/: CMakeLists.txt  Kconfig  Make.defs  Makefile
harfbuzz/: .gitignore  Kconfig  Make.defs  Makefile
inipp/: .gitignore
iperf2/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk  config.h
iperf3/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk  iperf_config.h  version.h
iso14229/: .gitignore
json-c/: CMakeLists.txt  Kconfig  Make.defs  Makefile  config.h
kmgk/: Kconfig  Makefile  Makefile-wasm  Wasm.mk  build_wasm_keystore.sh  defconfig
lc3/: CMakeLists.txt  Kconfig  Make.defs  Makefile
lcm/: CMakeLists.txt  Kconfig  Make.defs  Makefile  lcm_test.cpp
ldns/: .gitignore  CMakeLists.txt  Kconfig  Make.defs  Makefile
libchrome/: CMakeLists.txt  Kconfig  Makefile  Submake.mk
libconfig/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk
libdivide/: CMakeLists.txt  Kconfig  Make.defs  Makefile
libexpat/: CMakeLists.txt  Kconfig  Make.defs  Makefile  expat_config.h
libffi/: .gitignore  CMakeLists.txt  Kconfig  Make.defs  Makefile  ffi.h  fficonfig.h
libfluoride-sbc/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk
libhelix-aac/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk
libhelix-mp3/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk
libjpeg-turbo/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk
libldac/: CMakeLists.txt  Kconfig  Make.defs  Makefile
liblhdc/: CMakeLists.txt  Kconfig  Make.defs  Makefile
libopencore-amr/: CMakeLists.txt  Kconfig  Make.defs  Makefile
libpng/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk
libssh/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk  config.h
libtar/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk  config.h
libwebp/: .gitignore  CMakeLists.txt  Kconfig  Make.defs  Makefile
libxml2/: Kconfig  Make.defs  Makefile  Submake.mk  config.h
lmbench/: .gitignore  CMakeLists.txt  Kconfig  Make.defs  Makefile
lz4/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk
lzma/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk
mbedtls/: Kconfig  Make.defs  Makefile  Submake.mk
mdns/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk
mmc-utils/: CMakeLists.txt  Kconfig  Make.defs  Makefile
modp_b64/: Kconfig  Make.defs  Makefile  Submake.mk
mri/: Kconfig  Make.defs  Makefile
mtp-responder/: CMakeLists.txt  Kconfig  Make.defs  Makefile  mtp_port.c  mtp_usb_driver_nuttx.c
nanopb/: CMakeLists.txt  Kconfig  Make.defs  Makefile
nghttp2/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk  config.h
nlassert/: .gitignore
nlio/: .gitignore
nng/: Kconfig  Make.defs  Makefile  Submake.mk
ofono/: .clang-format  CMakeLists.txt  Kconfig  Make.defs  Makefile  config.h  version.h
optee/: CMakeLists.txt  Make.defs  Makefile  TA.mk
opus/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk  config.h
parameter-framework/: Kconfig  Make.defs  Makefile  Submake.mk
pciutils/: .gitignore  Kconfig  Make.defs  Makefile  config.h
pcre2/: CMakeLists.txt  Kconfig  Make.defs  Makefile  config.h
protobuf/: .gitignore
protobuf-c/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk
quirc/: Kconfig  (+3 more)
zint/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Submake.mk
(+215 files in other folders)
